build fixured